--- a/project.config.json
+++ b/project.config.json
@@ -11,6 +11,8 @@
 	"libVersion": "1.9.91",
 	"appid": "wx584ef88a3bd3b027",
 	"projectname": "iresearchliteV5.0",
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
