--- a/app.json
+++ b/app.json
@@ -1,9 +1,7 @@
 {
   "pages": [
-    
-      "pages/index/index",
+    "pages/index/index",
     "pages/indexList/indexList",
-
     "pages/news/news",
     "pages/report/report",
     "pages/research/research",
@@ -59,5 +57,6 @@
     "request": 10000,
     "downloadFile": 10000
   },
-  "debug": true
+  "debug": true,
+  "sitemapLocation": "sitemap.json"
 }
